test: [RTR-192] DTO 변경 구조 반영